# isat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml
.github/workflows/: Ruff.yaml
config/: app.json  crawler.json  cv.json  loader.json  logger.json
resources/: config.py  models.py
src/: main.py
src/complementary_colors/: Dockerfile  cc.py
src/complementary_colors/src/: main.py
src/crawler/: Dockerfile  crawler.py
src/crawler/src/: main.py  utils.py
src/cv/: Dockerfile
src/cv/src/: main.py  utils.py
src/handler/: Dockerfile
src/handler/src/: .utils.py.swp  main.py  utils.py
src/isat_ssu/: __init__.py  main.py
src/loader/: Dockerfile
src/loader/src/: main.py  utils.py
src/parser/: Dockerfile  parser.py
src/parser/src/: main.py  utils.py
src/query/: Dockerfile
src/query/src/: main.py
src/rembg/: Dockerfile
src/rembg/src/: main.py  utils.py
