[project]
name = "isat-ssu"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mizerael", email = "dan-acer@outlook.com" }
]
dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.5.3",
    "uvicorn>=0.26.0",
    "ruff>=0.1.14",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.0",
    "pillow>=10.3.0",
    "webdriver-manager>=4.0.1",
    "selenium>=4.19.0",
    "eel>=0.16.0",
    "opencv-python>=4.9.0.80",
    "matplotlib>=3.7.5",
    "pre_commit>=3.5.0",
    "python-multipart>=0.0.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "isat_ssu:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/isat_ssu"]
